[gd_scene load_steps=2 format=2]

[ext_resource path="res://mods/Lucy.LucysTools/lucys_menu.gd" type="Script" id=1]

[node name="lucys_menu" type="Control"]
margin_right = 800.0
margin_bottom = 400.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 543.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 786.0
margin_bottom = 14.0
text = "Lucy's Options 0.7.0 - F5 to Toggle Menu"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 786.0
margin_bottom = 22.0

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 786.0
margin_bottom = 40.0
text = "BBCode is only visible to LucysTools-compatible users. Allowed BBCode tags:"

[node name="bbcode_tags" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 786.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 786.0
margin_bottom = 52.0

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 786.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="Label5" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer"]
margin_top = 5.0
margin_right = 135.0
margin_bottom = 19.0
text = "Punch back on Punch"

[node name="lucy_punchback" type="CheckBox" parent="PanelContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
margin_left = 139.0
margin_right = 163.0
margin_bottom = 24.0

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 786.0
margin_bottom = 88.0

[node name="HFlowContainer3" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 786.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="Label5" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer3"]
margin_top = 5.0
margin_right = 127.0
margin_bottom = 19.0
text = "Custom Lobby Code"

[node name="lucy_lobbycode" type="LineEdit" parent="PanelContainer/VBoxContainer/HFlowContainer3"]
unique_name_in_owner = true
margin_left = 131.0
margin_right = 786.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 6
expand_to_text_length = true
placeholder_text = "Code (1-6 characters)"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 786.0
margin_bottom = 134.0
text = "Custom Server Name - Shown without BBCode for normal users"

[node name="HFlowContainer4" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 786.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="lucy_servername" type="LineEdit" parent="PanelContainer/VBoxContainer/HFlowContainer4"]
unique_name_in_owner = true
margin_right = 786.0
margin_bottom = 24.0
size_flags_horizontal = 3
expand_to_text_length = true
placeholder_text = "Name"

[node name="HFlowContainer6" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 786.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer6"]
margin_right = 144.0
margin_bottom = 14.0
text = "Server Name Preview: "

[node name="lucy_servername_preview" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HFlowContainer6"]
unique_name_in_owner = true
margin_left = 148.0
margin_right = 786.0
margin_bottom = 14.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "'s Lobby"
text = "'s Lobby"
scroll_active = false

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 786.0
margin_bottom = 188.0

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 786.0
margin_bottom = 206.0
text = "Server Join Message - Will be shown without BBCode for people without LucysTools"

[node name="HFlowContainer5" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 786.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="lucy_servermsg" type="LineEdit" parent="PanelContainer/VBoxContainer/HFlowContainer5"]
unique_name_in_owner = true
margin_right = 786.0
margin_bottom = 24.0
size_flags_horizontal = 3
expand_to_text_length = true
placeholder_text = "Message"

[node name="HFlowContainer7" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 786.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer7"]
margin_right = 109.0
margin_bottom = 14.0
text = "Normal Preview: "

[node name="lucy_servermsg_preview" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HFlowContainer7"]
unique_name_in_owner = true
margin_left = 113.0
margin_right = 786.0
margin_bottom = 14.0
size_flags_horizontal = 3
bbcode_enabled = true
scroll_active = false

[node name="HFlowContainer10" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 786.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer10"]
margin_right = 97.0
margin_bottom = 14.0
text = "Lame Preview: "

[node name="lucy_servermsg_preview2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HFlowContainer10"]
unique_name_in_owner = true
margin_left = 101.0
margin_right = 786.0
margin_bottom = 14.0
size_flags_horizontal = 3
bbcode_enabled = true
scroll_active = false

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 786.0
margin_bottom = 278.0

[node name="HFlowContainer8" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 786.0
margin_bottom = 306.0
rect_pivot_offset = Vector2( -141, -49 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer8"]
margin_top = 5.0
margin_right = 157.0
margin_bottom = 19.0
text = "Chat Name Color (global)"

[node name="lucy_chatcolor_bool" type="CheckBox" parent="PanelContainer/VBoxContainer/HFlowContainer8"]
unique_name_in_owner = true
margin_left = 161.0
margin_right = 231.0
margin_bottom = 24.0
text = "Enable"

[node name="lucy_chatcolor" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HFlowContainer8"]
unique_name_in_owner = true
margin_left = 235.0
margin_right = 277.0
margin_bottom = 24.0
rect_min_size = Vector2( 42, 0 )
edit_alpha = false

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer8"]
margin_left = 281.0
margin_top = 5.0
margin_right = 475.0
margin_bottom = 19.0
text = "    Chat Text Color (LucysTools)"

[node name="lucy_chatcolor_bool2" type="CheckBox" parent="PanelContainer/VBoxContainer/HFlowContainer8"]
unique_name_in_owner = true
margin_left = 479.0
margin_right = 549.0
margin_bottom = 24.0
text = "Enable"

[node name="lucy_chatcolor2" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HFlowContainer8"]
unique_name_in_owner = true
margin_left = 553.0
margin_right = 595.0
margin_bottom = 24.0
rect_min_size = Vector2( 42, 0 )
edit_alpha = false

[node name="HFlowContainer9" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 786.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( -141, -49 )
hint_tooltip = "Must match Steam username"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer9"]
margin_right = 348.0
margin_bottom = 14.0
text = "Custom Name - Must match Steam Name (LucysTools)"

[node name="lucy_namegood" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HFlowContainer9"]
unique_name_in_owner = true
margin_left = 352.0
margin_right = 402.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
bbcode_enabled = true
bbcode_text = "[color=green]Good[/color]"
text = "Good"
scroll_active = false

[node name="lucy_name" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 328.0
margin_right = 786.0
margin_bottom = 352.0
expand_to_text_length = true
placeholder_text = "Name"

[node name="lucy_name_preview" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 356.0
margin_right = 786.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "If you see this, modify your custom name"
text = "If you see this, modify your custom name"
scroll_active = false

[node name="HSeparator6" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 375.0
margin_right = 786.0
margin_bottom = 379.0

[node name="HFlowContainer2" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 383.0
margin_right = 786.0
margin_bottom = 403.0

[node name="lucy_clearchat" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
margin_right = 76.0
margin_bottom = 20.0
hint_tooltip = "Clears game chat (for you only)"
text = "Clear Chat"

[node name="lucy_lobbyrefresh" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 80.0
margin_right = 180.0
margin_bottom = 20.0
text = "Update Lobby"

[node name="lucy_raincloud" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 184.0
margin_right = 267.0
margin_bottom = 20.0
text = "Spawn Rain"

[node name="lucy_meteor" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 271.0
margin_right = 373.0
margin_bottom = 20.0
text = "Spawn Meteor"

[node name="lucy_void" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 377.0
margin_right = 461.0
margin_bottom = 20.0
text = "Spawn Void"

[node name="lucy_freezerain" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 465.0
margin_right = 551.0
margin_bottom = 20.0
text = "Freeze Rain"

[node name="lucy_clearrain" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 555.0
margin_right = 630.0
margin_bottom = 20.0
text = "Clear Rain"

[node name="lucy_clearmeteor" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
margin_left = 634.0
margin_right = 728.0
margin_bottom = 20.0
text = "Clear Meteor"

[connection signal="toggled" from="PanelContainer/VBoxContainer/HFlowContainer/lucy_punchback" to="." method="_on_lucy_punchback_toggled"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HFlowContainer3/lucy_lobbycode" to="." method="_on_lucy_lobbycode_text_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HFlowContainer4/lucy_servername" to="." method="_on_lucy_servername_text_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HFlowContainer5/lucy_servermsg" to="." method="_on_lucy_servermsg_text_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HFlowContainer8/lucy_chatcolor_bool" to="." method="_on_lucy_chatcolor_bool_toggled"]
[connection signal="color_changed" from="PanelContainer/VBoxContainer/HFlowContainer8/lucy_chatcolor" to="." method="_on_lucy_chatcolor_color_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HFlowContainer8/lucy_chatcolor_bool2" to="." method="_on_lucy_chatcolor_bool2_toggled"]
[connection signal="color_changed" from="PanelContainer/VBoxContainer/HFlowContainer8/lucy_chatcolor2" to="." method="_on_lucy_chatcolor2_color_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/lucy_name" to="." method="_on_lucy_name_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_clearchat" to="." method="_on_lucy_clearchat_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_lobbyrefresh" to="." method="_on_lucy_lobbyrefresh_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_raincloud" to="." method="_on_lucy_raincloud_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_meteor" to="." method="_on_lucy_meteor_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_void" to="." method="_on_lucy_void_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_freezerain" to="." method="_on_lucy_freezerain_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_clearrain" to="." method="_on_lucy_clearrain_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer2/lucy_clearmeteor" to="." method="_on_lucy_clearmeteor_pressed"]
